Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.6-Beta 1
  FEATURES:
    * Added keyboard shortcut for "Edit Track Information..." (BR 173814)
      Patch by Jasneet Bhatti.
    * Support for embedded album covers in non-collection tracks and
      in USB Mass Storage collection.
    * Hold the Shift key when dragging tracks to collections to move them
      instead of copying.
    * New search filter for absolute date
    * Named UMS collections
    * Albums with same name but different album artist are now correctly
      separated in USB Mass Storage, iPod and various online service collections.
    * Support for detecting compilations in USB Mass Storage collection.
    * Support embedded covers for ogg (read only) and flac files. (BR 288752)
    * Track meta-data can be edited in USB Mass Storage collection.
    * Support for album artists in USB Mass Storage collection.
    * album artist (if differs from artist), BPM, labels, last played time and
      bitrate are now shown in playlist track tooltip (if not already displayed
      in playlist)
    * Volume normalization: ReplayGain is now converted to iPod Sound Check and
      vice versa. (BR 142579)

  CHANGES:
    * Don't show unmounted USB Mass Storage devices and make it clear when
      the device is not "activated" yet.
    * "Devices" in Amarok configuration -> Plugins is with other related strings
      renamed to "Local Collection Backends" to reduce user confusion.
    * Enable keyboard activation of PlaylistBrowser items. 
    * Don't use `mysql_config --variable=pkgincludedir`, find mysql include
      directory manually by looking up mysql.h.
    * Album artist is now guessed for tracks that do not belong into any
      collection and tracks from USB Mass Storage collection. Guessing uses the
      same algorithm as Local Collection.
    * libgpod requirement raised from 0.7.0 to 0.7.93 for better maintainability.