@@ -115,10 +115,11 @@ class AMAROK_EXPORT PlaylistManager : public QObject
         *   @arg tracks list of tracks to save
         *   @arg name name of playlist to save
         *   @arg toProvider If 0 (default) will save to the default UserPlaylistProvider
+        *   @arg editName whether to edit new playlist name as soon as it is created
         *   @see defaultUserPlaylists
         */
         bool save( Meta::TrackList tracks, const QString &name = QString(),
-                   Playlists::UserPlaylistProvider *toProvider = 0 );
+                   Playlists::PlaylistProvider *toProvider = 0, bool editName = true );
 
         /**
          *  Saves a playlist from a file to the database.
