@@ -4,6 +4,7 @@ Amarok ChangeLog
 
 Version 2.6-Beta 1
   FEATURES:
+    * "Crop playlist" functionality implemented using drag & drop. (BR 267729, 211811)
     * Added keyboard shortcut for "Edit Track Information..." (BR 173814)
       Patch by Jasneet Bhatti.
     * Support for embedded album covers in non-collection tracks and
@@ -25,6 +26,7 @@ Version 2.6-Beta 1
       vice versa. (BR 142579)
 
   CHANGES:
+    * Drag & drop of tracks and playlists to Saved Playlists works in all cases.
     * Don't show unmounted USB Mass Storage devices and make it clear when
       the device is not "activated" yet.
     * "Devices" in Amarok configuration -> Plugins is with other related strings
@@ -40,6 +42,7 @@ Version 2.6-Beta 1
       "1.2 GB free" is shown instead of "85% used"; thicker capacity bar.
 
   BUGFIXES:
+    * iPod playlists now appear even when plugged in while Amarok is running. (BR 289303)
     * Show in Media Sources actions no longer reset the collection sorting to artist/album. (BR 231858)
     * Don't mark audio-CD tracks as unplayable (greyed out). (BR 285885)
     * Don't misbehave when track is dropped directly to saved playlist. (BR 293295)
